Personalización de estilos 1
Estilos personalizados 1

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,14 +1,68 @@
 // COLORES
+.cp
+  color: $color-primario !important
+.fcp
+  background-color: $color-primario !important
 
+.cs
+  color: $color-secundario !important
+.fcs
+  background-color: $color-secundario !important
+
+.cac
+  color: $color-acento-contenido !important
+.fcac
+  background-color: $color-acento-contenido !important
+
+.cab
+  color: $color-acento-botones !important
+.fcab
+  background-color: $color-acento-botones !important
+
+  
+  
 // BACKGROUNDS
 .bg-img-banner
   background-image: url(../assets/curso/banner-bg.png)
   background-position: center center
   background-size: cover
+  
+.bg2
+  background: #E6ECF7
 
-
-
-
+.fblanco
+  background-color: $white
 // OTROS
+.contenedor
+  padding: 3rem
+  margin-left: -3rem
+  margin-right: -3rem
+
 .tabs-c__header
   margin-bottom: 0 !important
+
+.traslapeTop
+  overflow: visible
+  margin-top: 20rem
+  .tabs-c
+    margin-top: -20rem
+
+.traslapeLoR
+  .col-lg-6
+    margin-left: -25%
+
+.border134
+  border-radius: 2rem 0 2rem 2rem
+
+.border123
+  border-radius: 2rem 2rem 2rem 0
+
+.text-rignt
+  text-align: right !important
+
+.text-big
+  font-size: 5rem
+  margin-bottom: 2rem
+
+.boxShadow
+  box-shadow: 3px 3px 5px rgba(0,0,0,0.5)
