--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -70,6 +70,13 @@ $secundario20: #0d4aad35
   &::before
     background-color: #E6D3D9 !important
     opacity: 1 !important
+
+.linea-tiempo-d__item.row.linea-tiempo-d__item--selected
+  span
+    color: $color-sistema-texto !important
+
+.linea-tiempo-d__item__content.tarjeta.tarjeta--gris
+  background-color: $azulGgrisMedio !important
   
 // BACKGROUNDS
 .bg-img-banner
